@@ -1,6 +1,7 @@
 package uk.gov.companieshouse.api.strikeoffobjections.controller;
 
-import org.junit.Assert;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mapstruct.factory.Mappers;
@@ -40,20 +41,13 @@ import uk.gov.companieshouse.service.links.CoreLinkKeys;
 import uk.gov.companieshouse.service.links.Links;
 import uk.gov.companieshouse.service.rest.response.ChResponseBody;
 import uk.gov.companieshouse.service.rest.response.PluggableResponseEntityFactory;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.contains;
@@ -329,7 +323,7 @@ class ObjectionControllerTest {
         assertNotNull(responseBody.getSuccessBody());
         assertEquals(1, responseBody.getSuccessBody().size());
 
-        AttachmentResponseDTO returnedAttachmentResponseDTO = responseBody.getSuccessBody().get(0);
+        AttachmentResponseDTO returnedAttachmentResponseDTO = responseBody.getSuccessBody().getFirst();
         assertEquals(attachmentResponseDTO, returnedAttachmentResponseDTO);
     }
 
@@ -530,7 +524,7 @@ class ObjectionControllerTest {
     }
 
     @Test
-    void testReturnOkStatusForDownload() throws ServiceException {
+    void testReturnOkStatusForDownload() {
         HttpServletResponse httpServletResponse = new MockHttpServletResponse();
         FileTransferApiClientResponse dummyDownloadResponse = Utils.dummyDownloadResponse();
         dummyDownloadResponse.setHttpStatus(HttpStatus.OK);
@@ -547,7 +541,7 @@ class ObjectionControllerTest {
     }
 
     @Test
-    void testReturnUnauthorizedStatusForDownload() throws ServiceException {
+    void testReturnUnauthorizedStatusForDownload() {
         HttpServletResponse httpServletResponse = new MockHttpServletResponse();
         FileTransferApiClientResponse dummyDownloadResponse = Utils.dummyDownloadResponse();
         dummyDownloadResponse.setHttpStatus(HttpStatus.UNAUTHORIZED);
@@ -564,7 +558,7 @@ class ObjectionControllerTest {
     }
 
     @Test
-    void testReturnForbiddenStatusForDownload() throws ServiceException {
+    void testReturnForbiddenStatusForDownload() {
         HttpServletResponse httpServletResponse = new MockHttpServletResponse();
         FileTransferApiClientResponse dummyDownloadResponse = Utils.dummyDownloadResponse();
         dummyDownloadResponse.setHttpStatus(HttpStatus.FORBIDDEN);
@@ -581,7 +575,7 @@ class ObjectionControllerTest {
     }
 
     @Test
-    void testDownloadWillCatchHttpClientExceptions() throws ServiceException {
+    void testDownloadWillCatchHttpClientExceptions() {
         HttpServletResponse httpServletResponse = new MockHttpServletResponse();
 
         when(objectionService.downloadAttachment(REQUEST_ID, OBJECTION_ID, ATTACHMENT_ID, httpServletResponse))
@@ -589,13 +583,13 @@ class ObjectionControllerTest {
 
         ResponseEntity<Void> responseEntity = objectionController.downloadAttachment(
                 COMPANY_NUMBER, OBJECTION_ID, ATTACHMENT_ID, REQUEST_ID, httpServletResponse);
-        Assert.assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
+        assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
         assertNull(responseEntity.getBody());
         assertTrue(responseEntity.getHeaders().isEmpty());
     }
 
     @Test
-    void testDownloadWillCatchHttpServerExceptions() throws ServiceException {
+    void testDownloadWillCatchHttpServerExceptions() {
         HttpServletResponse httpServletResponse = new MockHttpServletResponse();
 
         when(objectionService.downloadAttachment(REQUEST_ID, OBJECTION_ID, ATTACHMENT_ID, httpServletResponse))
@@ -604,22 +598,7 @@ class ObjectionControllerTest {
         ResponseEntity<Void> responseEntity = objectionController.downloadAttachment(
                 COMPANY_NUMBER, OBJECTION_ID, ATTACHMENT_ID, REQUEST_ID, httpServletResponse);
 
-        Assert.assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, responseEntity.getStatusCode());
-        assertNull(responseEntity.getBody());
-        assertTrue(responseEntity.getHeaders().isEmpty());
-    }
-
-    @Test
-    void willThrowServiceExceptionForDownload() throws ServiceException {
-        HttpServletResponse httpServletResponse = new MockHttpServletResponse();
-
-        when(objectionService.downloadAttachment(REQUEST_ID, OBJECTION_ID, ATTACHMENT_ID, httpServletResponse))
-                .thenThrow(ServiceException.class);
-
-        ResponseEntity<Void> responseEntity = objectionController.downloadAttachment(
-                COMPANY_NUMBER, OBJECTION_ID, ATTACHMENT_ID, REQUEST_ID, httpServletResponse);
-
-        Assert.assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, responseEntity.getStatusCode());
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, responseEntity.getStatusCode());
         assertNull(responseEntity.getBody());
         assertTrue(responseEntity.getHeaders().isEmpty());
     }
